--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@
   padding: 0;
 }
 
-body {
+.all {
   margin: 3rem 3rem 0rem 3rem;
   display: flex;
   flex-direction: column;
@@ -71,10 +71,11 @@ p {
   font-style: italic;
   font-family: var(--font-H);
   font-weight: 600;
+  text-align: center;
 }
 
 .heroimg {
-  width: 650px;
+  max-width: 650px;
 }
 
 .heroFinal {
@@ -122,7 +123,59 @@ hr {
 
 .names {
   font-size: 0.7rem;
-  font-family: var(--font-P);
+  font-family: var(--font-l);
   color: black;
   font-weight: 700;
+  line-height: 1rem;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  gap: 3rem;
+  margin-bottom: 5rem;
+}
+
+.components {
+  cursor: pointer;
+}
+
+footer {
+  background-color: #262626;
+  width: 100%;
+}
+
+.copyright {
+  color: rgb(112, 112, 112);
+  text-align: center;
+  padding: 2rem;
+}
+
+@media screen and (max-width: 500px) {
+  .heroimg {
+    max-width: 300px;
+  }
+
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .containerLeft {
+    max-width: 80ch;
+  }
+
+  .guestions {
+    text-align: center;
+  }
+
+  .creators {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .heroimg {
+    max-width: 200px;
+  }
 }
