--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,6 +19,34 @@
   background-color: rgb(255, 255, 255);
 }
 
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.pageName {
+  font-size: 3rem;
+  font-family: var(--font-webname);
+  margin: 3rem 0;
+  font-weight: 400;
+  text-align: center;
+  color: rgb(114, 114, 114);
+}
+
+.pageNameStyle {
+  font-weight: 800;
+  color: rgb(138, 104, 104);
+}
+
+.line {
+  width: 100%;
+  border: 1px solid rgb(245, 245, 245);
+}
+
 .titleContainer {
   text-align: center;
   margin-bottom: 4rem;
@@ -55,7 +83,17 @@
 p {
   color: rgb(90, 90, 90);
   font-family: var(--font-P);
-  line-height: 1.7rem;
+  line-height: 2rem;
+}
+
+.first {
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: bold;
+  letter-spacing: 5px;
+  float: left;
+  line-height: 4rem;
+  margin-right: 0.5rem;
 }
 
 .subHero {
