--- a/src/App.module.css
+++ b/src/App.module.css
@@ -184,14 +184,50 @@ hr {
 }
 
 footer {
-  background-color: #262626;
-  width: 100%;
+  padding: 0 3rem;
+  background-color: #000000;
+  padding: 5rem 5rem;
+}
+
+.footerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer .pageName {
+  color: rgb(168, 168, 168);
+  font-size: 2rem;
+  margin: 0;
+}
+
+footer .pageNameStyle {
+  color: white;
 }
 
 .copyright {
-  color: rgb(112, 112, 112);
+  color: rgb(78, 78, 78);
   text-align: center;
-  padding: 2rem;
+  font-family: var(--font-l);
+  font-weight: 500;
+}
+
+footer hr {
+  margin-top: 1rem;
+  border: 1px solid rgb(49, 49, 49);
+}
+
+@media screen and (max-width: 710px) {
+  .footerContainer {
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .copyright {
+    margin-top: 2rem;
+    line-height: 1rem;
+  }
 }
 
 @media screen and (max-width: 500px) {
